--- a/inventory/static/CSS/product-list.css
+++ b/inventory/static/CSS/product-list.css
@@ -1,38 +1,90 @@
-table {
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px solid #0e0e0e; 
-    color: #080808; 
-  }
-  
-  th {
-    background-color: #f4670a; 
-    padding: 12px; 
-    border: 1px solid #f8760c; 
-    text-align: left;
-    font-weight: bold; 
-  }
-  
-  td {
-    padding: 10px; 
-    border: 1px solid #161515; 
-  }
 
-  td a {
-    display: inline-block; 
-    padding: 6px 12px; 
-    text-align: center;
-    text-decoration: none;
-    color: #0088FF; 
-    border-radius: 4px; 
-    background-color: #E6E6E6; 
-    transition: background-color 0.2s ease; 
-  }
 
-  td a:hover {
-    background-color: #fdf6f6; 
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f06e10; 
-  }
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  margin-top: 40px;
+}
+
+.product-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.product {
+  width: 300px;
+  margin: 20px;
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #d3dd17;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.product-image {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.product-title {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.product-description {
+  margin-bottom: 10px;
+}
+
+.product-price {
+  margin-bottom: 10px;
+}
+
+.product-links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-links a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.navbar {
+  background-color: #e9d925;
+  color: #ffffff;
+  padding: 10px;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar li {
+  display: inline;
+  margin-right: 10px;
+}
+
+.navbar li a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.navbar li a:hover {
+  text-decoration: underline;
+}
