--- a/templates/cart/cart_list.html
+++ b/templates/cart/cart_list.html
@@ -1,38 +1,67 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'CSS/product-list.css' %}">
+    
+    <style>
+        .product-card {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 1px solid black;
+        }
+        
+        .product-image {
+            width: 100px;
+            height: 100px;
+            margin-right: 10px;
+        }
+        
+        .product-details {
+            flex-grow: 1;
+        }
+        
+        .product-name {
+            font-weight: bold;
+        }
+        
+        .payment-button {
+            margin-left: auto;
+        }
+        
+        .payment-button button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            cursor: pointer;
+        }
+        
+        .payment-button button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+    
     <title>Document</title>
 </head>
 <body>
-     <table >
-        <thead >
-            <tr>
-                <th >Product</th>
-                <th >Price</th>
-                <th >Quantity</th>
-                <th >Payment Options</th>
-              
-            </tr>
-        </thead>
-        <tbody>
-            {% for cart in carts %}
-            <tr>
-                <td >{{ cart.products }}</td>
-                <td >{{ cart.price }}</td>
-                <td >{{ cart.quantity }}</td>
-                <td >{{ cart.paymentoptions}}</td>
-                {% comment %} <td> {% endcomment %}
-                    {% comment %} <a href="{% url 'product_detail_view' id=product.id %}">View details</a> {% endcomment %}
-                {% comment %} </td> {% endcomment %}
-                {% comment %} <td><a href="{% url 'edit_product_view' id=product.id %}">Edit Details</a><td/> {% endcomment %}
-            </tr>
-            {%endfor%}
-        </tbody>
-    </table>
+    <div class="product-list">
+        {% for cart in carts %}
+        <div class="product-card">
+            <img class="product-image" src="{{ cart.image.url }}" alt="Product Image">
+            <div class="product-details">
+                <p class="product-name">{{ cart.name }}</p>
+                <p>Price: {{ cart.price }}</p>
+                <p>Quantity: {{ cart.quantity }}</p>
+                <p>Payment Options: {{ cart.paymentoptions }}</p>
+            </div>
+            <div class="payment-button">
+                <a href="{% url 'create_payment_view' %}"> <button>Pay</button></a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
