--- a/templates/payment/create_payment.html
+++ b/templates/payment/create_payment.html
@@ -8,7 +8,7 @@
         <title>Document</title>
     </head>
     <body>
-        <h3 class="upload-heading">Create account</h3>
+        <h3 class="upload-heading">Payment</h3>
         <form method="POST" class="upload-form" enctype="multipart/data">
         {% csrf_token %} {{form.as_p}}
         <button type='submit'>Save</button>
